// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Structure/<ino-card> DisabledElevation smoke-test 1`] = `
<div id="root-inner">
  <div class="story-card">
    <ino-card class="customizable-card hydrated"
              disable-elevation="true"
              selected="false"
    >
      <div class="mdc-card mdc-card--outlined">
        <div class="ino-card__checkmark-container">
        </div>
        <div class="ino-card__header">
          <div slot="header"
               class="card-header"
          >
            <ino-icon icon="info"
                      clickable
                      class="ino-icon--color-scheme-primary hydrated"
            >
            </ino-icon>
          </div>
        </div>
        <div class="ino-card__content">
          <div slot="content"
               class="card-content--vertical"
          >
            <ino-img src="https://cdn-images-1.medium.com/max/1600/1*HP8l7LMMt7Sh5UoO1T-yLQ.png"
                     class="hydrated"
            >
              <div class="ino-img__composer"
                   style="padding-top: 100%;"
              >
                <img class="ino-img__image"
                     src="https://cdn-images-1.medium.com/max/1600/1*HP8l7LMMt7Sh5UoO1T-yLQ.png"
                >
                <div class="ino-img__fallback-icon">
                  <ino-icon class="ino-icon--color-scheme-primary hydrated">
                  </ino-icon>
                </div>
              </div>
            </ino-img>
          </div>
        </div>
        <div class="ino-card__footer">
          <div slot="footer"
               class="sample-card-footer"
          >
            <ino-segment-group id="ino-segment-group-id__cg0cfpq5y"
                               class="hydrated"
            >
              <ino-segment-button value="1"
                                  class="hydrated"
              >
                Read
              </ino-segment-button>
              <ino-segment-button value="2"
                                  class="hydrated"
              >
                Bookmark
              </ino-segment-button>
            </ino-segment-group>
          </div>
        </div>
      </div>
    </ino-card>
  </div>
</div>
`;

exports[`Structure/<ino-card> Playground smoke-test 1`] = `
<div id="root-inner">
  <div class="story-card">
    <ino-card class="customizable-card ino-elevate hydrated"
              disable-elevation="false"
              selected="false"
    >
      <div class="mdc-card mdc-card--outlined">
        <div class="ino-card__checkmark-container">
        </div>
        <div class="ino-card__header">
          <div slot="header"
               class="card-header"
          >
            <ino-icon icon="info"
                      clickable
                      class="hydrated ino-icon--color-scheme-primary"
            >
            </ino-icon>
          </div>
        </div>
        <div class="ino-card__content">
          <div slot="content"
               class="card-content--vertical"
          >
            <ino-img src="https://cdn-images-1.medium.com/max/1600/1*HP8l7LMMt7Sh5UoO1T-yLQ.png"
                     class="hydrated"
            >
              <div class="ino-img__composer"
                   style="padding-top: 100%;"
              >
                <img class="ino-img__image"
                     src="https://cdn-images-1.medium.com/max/1600/1*HP8l7LMMt7Sh5UoO1T-yLQ.png"
                >
                <div class="ino-img__fallback-icon">
                  <ino-icon class="hydrated ino-icon--color-scheme-primary">
                  </ino-icon>
                </div>
              </div>
            </ino-img>
          </div>
        </div>
        <div class="ino-card__footer">
          <div slot="footer"
               class="sample-card-footer"
          >
            <ino-segment-group id="ino-segment-group-id__za0fcf6ur"
                               class="hydrated"
            >
              <ino-segment-button value="1"
                                  class="hydrated"
              >
                Read
              </ino-segment-button>
              <ino-segment-button value="2"
                                  class="hydrated"
              >
                Bookmark
              </ino-segment-button>
            </ino-segment-group>
          </div>
        </div>
      </div>
    </ino-card>
  </div>
</div>
`;
